--- a/about-us.html
+++ b/about-us.html
@@ -86,93 +86,91 @@
     <div class="page-wraper">
       <!-- header -->
       <header
-      class="site-header header mo-left header-style-1"
-      style="height: 134px"
+        class="site-header header mo-left header-style-1"
+        style="height: 134px"
       >
-      <!-- top bar -->
-      <div class="top-bar">
-        <div class="container">
-          <div class="row d-flex justify-content-between">
-            <div class="dlab-topbar-left"></div>
-            <div class="dlab-topbar-right">
-              <ul class="social-bx list-inline pull-right">
-                <li>
-                  <a
-                    target="__blank"
-                    href="https://www.instagram.com/jabm2018/"
-                    class="fa fa-instagram"
-                  ></a>
-                </li>
-                <li>
-                  <a href="javascript:void(0);" class="fa fa-facebook"></a>
-                </li>
-                <li>
-                  <a href="javascript:void(0);" class="fa fa-twitter"></a>
-                </li>
-                <li>
-                  <a href="javascript:void(0);" class="fa fa-linkedin"></a>
-                </li>
-                <li>
-                  <a href="javascript:void(0);" class="fa fa-google-plus"></a>
-                </li>
-              </ul>
+        <!-- top bar -->
+        <div class="top-bar">
+          <div class="container">
+            <div class="row d-flex justify-content-between">
+              <div class="dlab-topbar-left"></div>
+              <div class="dlab-topbar-right">
+                <ul class="social-bx list-inline pull-right">
+                  <li>
+                    <a
+                      target="__blank"
+                      href="https://www.instagram.com/jabm2018/"
+                      class="fa fa-instagram"
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="javascript:void(0);" class="fa fa-facebook"></a>
+                  </li>
+                  <li>
+                    <a href="javascript:void(0);" class="fa fa-twitter"></a>
+                  </li>
+                  <li>
+                    <a href="javascript:void(0);" class="fa fa-linkedin"></a>
+                  </li>
+                  <li>
+                    <a href="javascript:void(0);" class="fa fa-google-plus"></a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <!-- top bar END-->
-      <!-- main header -->
-      <div
-        class="sticky-header header-curve main-bar-wraper navbar-expand-lg"
-      >
-        <div class="main-bar bg-primary clearfix">
-          <div class="container clearfix">
-            <!-- website logo -->
-            <div class="logo-header mostion">
-              <a href="index.html"
-                ><img src="images/logo.jpg" width="193" height="89" alt=""
-              /></a>
-            </div>
-            <!-- nav toggle button -->
-            <button
-              class="navbar-toggler collapsed navicon justify-content-end"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarNavDropdown"
-              aria-controls="navbarNavDropdown"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span></span>
-              <span></span>
-              <span></span>
-            </button>
+        <!-- top bar END-->
+        <!-- main header -->
+        <div
+          class="sticky-header header-curve main-bar-wraper navbar-expand-lg"
+        >
+          <div class="main-bar bg-primary clearfix">
+            <div class="container clearfix">
+              <!-- website logo -->
+              <div class="logo-header mostion">
+                <a href="index.html"
+                  ><img src="images/logo.png" width="193" height="89" alt=""
+                /></a>
+              </div>
+              <!-- nav toggle button -->
+              <button
+                class="navbar-toggler collapsed navicon justify-content-end"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span></span>
+                <span></span>
+                <span></span>
+              </button>
 
-            <!-- main nav -->
-            <div
-              class="header-nav navbar-collapse collapse justify-content-end"
-              id="navbarNavDropdown"
-            >
-              <ul class="nav navbar-nav nav-style">
-                <li id="index"><a href="index.html">Home</a></li>
-                <li id="about-us"><a href="about-us.html">About Us</a></li>
-                <li id="services"><a href="services.html">Services</a></li>
-                <li id="contact-us">
-                  <a href="contact-us.html">Contact us</a>
-                </li>
-                <li id="projects">
-                  <a href="projects.html">Our Projects</a>
-                </li>
-                <li id="gallery">
-                  <a href="gallery.html">Gallery</a>
-                </li>
-              </ul>
+              <!-- main nav -->
+              <div
+                class="header-nav navbar-collapse collapse justify-content-end"
+                id="navbarNavDropdown"
+              >
+                <ul class="nav navbar-nav nav-style">
+                  <li id="index"><a href="index.html">Home</a></li>
+                  <li id="about-us"><a href="about-us.html">About Us</a></li>
+                  <li id="services"><a href="services.html">Services</a></li>
+                  <li id="contact-us">
+                    <a href="contact-us.html">Contact us</a>
+                  </li>
+                  
+                  <li id="gallery">
+                    <a href="certificate.html">Certificates</a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <!-- main header END -->
-    </header>
+        <!-- main header END -->
+      </header>
       <!-- header END -->
       <!-- Content -->
       <div class="page-content">
@@ -237,7 +235,7 @@
                     </blockquote>
                     <div>
                       <span style="font-weight: bold; color: blue">
-                        Muhammad Azeem</span
+                        Shahzad Mehmood</span
                       ><br />
                       CEO
                     </div>
@@ -307,7 +305,7 @@
                   </div>
                   <ul>
                     <li>
-                      <i class="ti-location-pin"></i><strong>address</strong>P.
+                      <i class="ti-location-pin"></i><strong>address</strong>
                       Plot#900 Block#01 Sector D-ll Green Town, Lahore, Pakistan
                     </li>
 
