--- a/contact-us.html
+++ b/contact-us.html
@@ -22,7 +22,7 @@
     <!-- FAVICONS ICON -->
 
     <!-- PAGE TITLE HERE -->
-    <title>Contact Us - JESR AL AMANAH</title>
+    <title>Contact Us - S&S Engineering</title>
 
     <!-- MOBILE SPECIFIC -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -99,18 +99,18 @@
                   <li>
                     <a
                       target="__blank"
-                      href="javascript:void(0);"
+                      href="https://www.instagram.com/jabm2018/"
                       class="fa fa-instagram"
                     ></a>
                   </li>
                   <li>
-                    <a target="__blank" href="https://www.facebook.com/profile.php?id=61562511711860&mibextid=ZbWKwL" class="fa fa-facebook"></a>
+                    <a href="javascript:void(0);" class="fa fa-facebook"></a>
                   </li>
                   <li>
                     <a href="javascript:void(0);" class="fa fa-twitter"></a>
                   </li>
                   <li>
-                    <a target="__blank" href="https://www.linkedin.com/company/s-s-engineering-services-pvt-ltd/" class="fa fa-linkedin"></a>
+                    <a href="javascript:void(0);" class="fa fa-linkedin"></a>
                   </li>
                   <li>
                     <a href="javascript:void(0);" class="fa fa-google-plus"></a>
@@ -130,7 +130,7 @@
               <!-- website logo -->
               <div class="logo-header mostion">
                 <a href="index.html"
-                  ><img src="images/logo.jpg" width="193" height="89" alt=""
+                  ><img src="images/logo.png" width="193" height="89" alt=""
                 /></a>
               </div>
               <!-- nav toggle button -->
@@ -160,11 +160,9 @@
                   <li id="contact-us">
                     <a href="contact-us.html">Contact us</a>
                   </li>
-                  <li id="projects">
-                    <a href="projects.html">Our Projects</a>
-                  </li>
+                  
                   <li id="gallery">
-                    <a href="gallery.html">Gallery</a>
+                    <a href="certificate.html">Certificates</a>
                   </li>
                 </ul>
               </div>
@@ -290,7 +288,7 @@
                 <!-- Map part start -->
                 <h2>Our Location</h2>
                 <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3605.064490890413!2d55.495767!3d25.369155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjXCsDIyJzA5LjAiTiA1NcKwMjknNDQuOCJF!5e0!3m2!1sen!2s!4v1690740602584!5m2!1sen!2s"
+                  src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3404.320797133638!2d74.3034965756081!3d31.4328342742542!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzHCsDI1JzU4LjIiTiA3NMKwMTgnMjEuOSJF!5e0!3m2!1sen!2s!4v1722685919207!5m2!1sen!2s"
                   width="100%"
                   height="400"
                   frameborder="0"
@@ -329,7 +327,7 @@
                   </div>
                   <ul>
                     <li>
-                      <i class="ti-location-pin"></i><strong>address</strong>P.
+                      <i class="ti-location-pin"></i><strong>address</strong>
                       Plot#900 Block#01 Sector D-ll Green Town, Lahore, Pakistan
                     </li>
 
