--- a/certificate.html
+++ b/certificate.html
@@ -201,7 +201,7 @@
                     <a href="contact-us.html">Contact us</a>
                   </li>
                   
-                  <li id="gallery">
+                  <li id="certificate">
                     <a href="certificate.html">Certificates</a>
                   </li>
                 </ul>
