--- a/certificate.html
+++ b/certificate.html
@@ -311,6 +311,8 @@
       <!-- Content END-->
       <!-- Footer -->
       <footer class="site-footer" style="display: block; height: 419px">
+       
+        <!-- footer top part -->
         <div class="footer-top">
           <div class="container">
             <div class="row">
@@ -318,13 +320,7 @@
                 <h4 class="m-b15 text-uppercase">About Us</h4>
                 <div class="widget recent-posts-entry">
                   <p>
-                    JABM is providing reliable and competitive services to the
-                    clients, with a view to narrow the widening gap between
-                    demand and supply fuelled by today’s’ unprecedented upturns
-                    in sectors of our operation. With exclusive arrangements
-                    with the world class manufacturers and suppliers, JABM
-                    becomes a natural choice for solutions, the reason we say
-                    “Let’s grow to-gather”.
+                    <b>S&S</b> Engineering your trusted partner in the maintenance and service of essential equipment. We specialize in providing comprehensive maintenance solutions for a wide range of machines and systems, ensuring they operate at peak performance and efficiency.
                   </p>
                 </div>
               </div>
@@ -337,17 +333,16 @@
                   </div>
                   <ul>
                     <li>
-                      <i class="ti-location-pin"></i><strong>address</strong>P.
-                      O. Box 22189 AJMAN – UAE
+                      <i class="ti-location-pin"></i><strong>address</strong>
+                      Plot#900 Block#01 Sector D-ll Green Town, Lahore, Pakistan
                     </li>
 
                     <li>
                       <i class="fa fa-envelope"></i
-                      ><strong>email</strong>info@jabmME.com
+                      ><strong>email</strong>ssengineeringservices940@gmail.com
                     </li>
                     <li>
-                      <i class="fa fa-mobile"></i><strong>phone</strong>+971 56
-                      1432 706
+                      <i class="fa fa-mobile"></i><strong>phone</strong>+92 302 8445441
                     </li>
                   </ul>
                 </div>
@@ -355,45 +350,7 @@
             </div>
           </div>
         </div>
-        <!-- footer bottom part -->
-        <div class="footer-bottom footer-line">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-4 col-md-4 text-left">
-                <span>© Copyright 2023</span>
-              </div>
-              <div class="col-lg-4 col-md-4 text-center">
-                <span>
-                  Developed By
-                  <a href="https://www.linkedin.com/in/muhammad-haris-javed/"
-                    >Haris</a
-                  >
-                </span>
-              </div>
-              <div class="col-lg-4 col-md-4 text-right">
-                <div class="dlab-topbar-right">
-                  <ul class="social-bx list-inline pull-right">
-                    <li>
-                      <a
-                        href="https://www.facebook.com/innocent.hashi1"
-                        target="_blank"
-                        class="fa fa-facebook"
-                      ></a>
-                    </li>
-
-                    <li>
-                      <a
-                        href="https://www.linkedin.com/in/muhammad-haris-javed/"
-                        target="_blank"
-                        class="fa fa-linkedin"
-                      ></a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        
       </footer>
       <!-- Footer END-->
       <!-- scroll top button -->
