--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <meta name="format-detection" content="telephone=no" />
     <meta
       name="description"
-      content="AutoCare is well designed creating websites of automotive repair shops, stores with spare parts and accessories for car repairs, car washes, car danting and panting, service stations, car showrooms painting, major auto centers and other sites related to cars and car services."
+      content="S&S Engineering is a leading provider of maintenance services for a wide range of essential equipment. Our expertise spans kitchen equipment, coffee machines, cold storage units, -85°C freezers, and various laboratory instruments. We ensure the optimal performance and longevity of your critical appliances, whether in a commercial kitchen, a bustling café, or a high-tech laboratory. With nearly a decade of experience, S&S Engineering prides itself on delivering reliable, efficient solutions and unwavering commitment to quality and customer satisfaction."
     />
-    <meta property="og:title" content="Auto Care - Car Services Template" />
+    <meta property="og:title" content="S&S Engineering - Busisness Site" />
     <meta
       property="og:description"
-      content="AutoCare is well designed creating websites of automotive repair shops, stores with spare parts and accessories for car repairs, car washes, car danting and panting, service stations, car showrooms painting, major auto centers and other sites related to cars and car services."
+      content="S&S Engineering is a leading provider of maintenance services for a wide range of essential equipment. Our expertise spans kitchen equipment, coffee machines, cold storage units, -85°C freezers, and various laboratory instruments. We ensure the optimal performance and longevity of your critical appliances, whether in a commercial kitchen, a bustling café, or a high-tech laboratory. With nearly a decade of experience, S&S Engineering prides itself on delivering reliable, efficient solutions and unwavering commitment to quality and customer satisfaction."
     />
     <meta property="og:image" content="social-image.png" />
 
     <!-- FAVICONS ICON -->
 
     <!-- PAGE TITLE HERE -->
-    <title>Home - JESR AL AMANAH</title>
+    <title>Home - S&S Engineering</title>
 
     <!-- MOBILE SPECIFIC -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -1509,139 +1509,33 @@
             </div>
           </div>
         </div>
-        <!-- Our Projects END -->
-
-        <!-- Team member -->
-        <!--<div class="section-full bg-white content-inner">
-        <div class="container">
-            <div class="section-head text-center ">
-                <h2 class="text-uppercase"> Meet The Team</h2>
-                <div class="dlab-separator-outer ">
-                    <div class="dlab-separator bg-secondry style-skew"></div>
-                </div>
-                <p>There are many variations of passages of Lorem Ipsum typesetting industry has been the industry's standard dummy text ever since the been when an unknown printer.</p>
-            </div>
-            <div class="section-content text-center ">
-                <div class="row">
-                    <div class="col-lg-3 col-md-6 col-sm-6">
-                        <div class="dlab-box m-b30">
-                            <div class="dlab-media"> <a href="javascript:;"> <img width="358" height="300" alt="" src="images/1.jpg" style="width:358px; height:250px"> </a>
-                                <div class="dlab-info-has skew-has  bg-primary">
-                                    <ul class="dlab-social-icon dez-border">
-                                        <li><a class="fa fa-facebook" href="javascript:void(0);"></a></li>
-                                        <li><a class="fa fa-twitter" href="javascript:void(0);"></a></li>
-                                        <li><a class="fa fa-linkedin" href="javascript:void(0);"></a></li>
-                                        <li><a class="fa fa-facebook" href="javascript:void(0);"></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="p-a10">
-                                <h4 class="dlab-title text-uppercase m-b5"><a href="javascript:;">Nashid Martines</a></h4>
-                                <span class="dlab-member-position">Director</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-6">
-                        <div class="dlab-box m-b30">
-                            <div class="dlab-media"> <a href="javascript:;"> <img  alt="" src="images/2.jpg" style="width:358px; height:250px"> </a>
-                                <div class="dlab-info-has skew-has bg-primary">
-                                    <ul class="dlab-social-icon dez-border">
-                                        <li><a class="fa fa-facebook" href="javascript:void(0);"></a></li>
-                                        <li><a class="fa fa-twitter" href="javascript:void(0);"></a></li>
-                                        <li><a class="fa fa-linkedin" href="javascript:void(0);"></a></li>
-                                        <li><a class="fa fa-facebook" href="javascript:void(0);"></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="p-a10 bg-white">
-                                <h4 class="dlab-title text-uppercase m-b5"><a href="javascript:;">konne Backfield</a></h4>
-                                <span class="dlab-member-position">Designer</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-6">
-                        <div class="dlab-box m-b30">
-                            <div class="dlab-media"> <a href="javascript:;"> <img  alt="" src="images/3.jpg" style="width:358px; height:250px"> </a>
-                                <div class="dlab-info-has skew-has bg-primary">
-                                    <ul class="dlab-social-icon dez-border">
-                                        <li><a class="fa fa-facebook" href="javascript:void(0);"></a></li>
-                                        <li><a class="fa fa-twitter" href="javascript:void(0);"></a></li>
-                                        <li><a class="fa fa-linkedin" href="javascript:void(0);"></a></li>
-                                        <li><a class="fa fa-facebook" href="javascript:void(0);"></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="p-a10">
-                                <h4 class="dlab-title text-uppercase m-b5"><a href="javascript:;">Hackson Willingham</a></h4>
-                                <span class="dlab-member-position">Developer</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-6">
-                        <div class="dlab-box m-b10">
-                            <div class="dlab-media"> <a href="javascript:;"> <img  alt="" src="images/4.jpg" style="width:358px; height:250px"> </a>
-                                <div class="dlab-info-has skew-has bg-primary">
-                                    <ul class="dlab-social-icon dez-border">
-                                        <li><a class="fa fa-facebook" href="javascript:void(0);"></a></li>
-                                        <li><a class="fa fa-twitter" href="javascript:void(0);"></a></li>
-                                        <li><a class="fa fa-linkedin" href="javascript:void(0);"></a></li>
-                                        <li><a class="fa fa-facebook" href="javascript:void(0);"></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="p-a10">
-                                <h4 class="dlab-title text-uppercase m-b5"><a href="javascript:;">konne Backfield</a></h4>
-                                <span class="dlab-member-position">Manager</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>-->
-        <!-- Team member END -->
-        <!-- Latest blog -->
-
-        <!-- Latest blog END -->
-
         <!-- Client logo -->
         <div class="section-full dlab-we-find bg-img-fix p-t50 p-b50">
           <div class="container">
             <div class="section-content">
               <div class="owl-carousel owl-theme client-logo-carousel">
                 <div class="item">
-                  <img src="images/client-logo/logo1.jpg" alt="" />
+                  <img src="uploads/logo/mcdonald.png" alt="" />
                 </div>
                 <div class="item">
-                  <img src="images/client-logo/logo2.jpg" alt="" />
+                  <img src="uploads/logo/KFC.png" alt="" />
                 </div>
                 <div class="item">
-                  <img src="images/client-logo/logo3.jpg" alt="" />
+                  <img src="uploads/logo/Tim-Hortons-logo.png" alt="" />
                 </div>
                 <div class="item">
-                  <img src="images/client-logo/logo4.jpg" alt="" />
+                  <img src="uploads/logo/Dunkin.jpg" alt="" />
                 </div>
                 <div class="item">
-                  <img src="images/client-logo/logo1.jpg" alt="" />
+                  <img src="uploads/logo/2ndcup.jpg" alt="" />
                 </div>
                 <div class="item">
-                  <img src="images/client-logo/logo2.jpg" alt="" />
+                  <img src="uploads/logo/CB&TL.png" alt="" />
                 </div>
                 <div class="item">
-                  <img src="images/client-logo/logo3.jpg" alt="" />
+                  <img src="uploads/logo/Tattle-tea-house.jpg" alt="" />
                 </div>
-                <div class="item">
-                  <img src="images/client-logo/logo4.jpg" alt="" />
-                </div>
-                <div class="item">
-                  <img src="images/client-logo/logo1.jpg" alt="" />
-                </div>
-                <div class="item">
-                  <img src="images/client-logo/logo2.jpg" alt="" />
-                </div>
-                <div class="item">
-                  <img src="images/client-logo/logo3.jpg" alt="" />
-                </div>
+                
               </div>
             </div>
           </div>
