meta tags changes

--- a/contact-us.html
+++ b/contact-us.html
@@ -10,14 +10,13 @@
     <meta name="format-detection" content="telephone=no" />
     <meta
       name="description"
-      content="AutoCare is well designed creating websites of automotive repair shops, stores with spare parts and accessories for car repairs, car washes, car danting and panting, service stations, car showrooms painting, major auto centers and other sites related to cars and car services."
+      content="S&S Engineering is a leading provider of maintenance services for a wide range of essential equipment. Our expertise spans kitchen equipment, coffee machines, cold storage units, -85°C freezers, and various laboratory instruments. We ensure the optimal performance and longevity of your critical appliances, whether in a commercial kitchen, a bustling café, or a high-tech laboratory. With nearly a decade of experience, S&S Engineering prides itself on delivering reliable, efficient solutions and unwavering commitment to quality and customer satisfaction."
     />
-    <meta property="og:title" content="Auto Care - Car Services Template" />
+    <meta property="og:title" content="S&S Engineering - Busisness Site" />
     <meta
       property="og:description"
-      content="AutoCare is well designed creating websites of automotive repair shops, stores with spare parts and accessories for car repairs, car washes, car danting and panting, service stations, car showrooms painting, major auto centers and other sites related to cars and car services."
+      content="S&S Engineering is a leading provider of maintenance services for a wide range of essential equipment. Our expertise spans kitchen equipment, coffee machines, cold storage units, -85°C freezers, and various laboratory instruments. We ensure the optimal performance and longevity of your critical appliances, whether in a commercial kitchen, a bustling café, or a high-tech laboratory. With nearly a decade of experience, S&S Engineering prides itself on delivering reliable, efficient solutions and unwavering commitment to quality and customer satisfaction."
     />
-    <meta property="og:image" content="social-image.png" />
 
     <!-- FAVICONS ICON -->
 
@@ -26,12 +25,6 @@
 
     <!-- MOBILE SPECIFIC -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!--[if lt IE 9]>
-      <script src="https://s3.ap-south-1.amazonaws.com/dlab-html/autocare/xhtml/js/html5shiv.min.js"></script>
-      <script src="https://s3.ap-south-1.amazonaws.com/dlab-html/autocare/xhtml/js/respond.min.js"></script>
-    <![endif]-->
-
     <!-- STYLESHEETS -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/templete.css" />
@@ -270,15 +263,7 @@
                       </div>
                     </li>
                   </ul>
-                  <!--<div class="m-t20">
-              <ul class="dlab-social-icon dez-border dlab-social-icon-lg">
-                <li><a href="javascript:void(0);" class="fa fa-facebook bg-primary"></a></li>
-                <li><a href="javascript:void(0);" class="fa fa-twitter bg-primary"></a></li>
-                <li><a href="javascript:void(0);" class="fa fa-linkedin bg-primary"></a></li>
-                <li><a href="javascript:void(0);" class="fa fa-pinterest-p bg-primary"></a></li>
-                <li><a href="javascript:void(0);" class="fa fa-google-plus bg-primary"></a></li>
-              </ul>
-            </div>-->
+                  
                 </div>
               </div>
               <!-- right part END -->
