--- a/services.html
+++ b/services.html
@@ -7,22 +7,20 @@
     <meta name="author" content="" />
     <meta name="robots" content="" />
     <meta name="description" content="" />
-    <meta name="format-detection" content="telephone=no" />
     <meta
       name="description"
-      content="AutoCare is well designed creating websites of automotive repair shops, stores with spare parts and accessories for car repairs, car washes, car danting and panting, service stations, car showrooms painting, major auto centers and other sites related to cars and car services."
+      content="S&S Engineering is a leading provider of maintenance services for a wide range of essential equipment. Our expertise spans kitchen equipment, coffee machines, cold storage units, -85°C freezers, and various laboratory instruments. We ensure the optimal performance and longevity of your critical appliances, whether in a commercial kitchen, a bustling café, or a high-tech laboratory. With nearly a decade of experience, S&S Engineering prides itself on delivering reliable, efficient solutions and unwavering commitment to quality and customer satisfaction."
     />
-    <meta property="og:title" content="Auto Care - Car Services Template" />
+    <meta property="og:title" content="S&S Engineering - Busisness Site" />
     <meta
       property="og:description"
-      content="AutoCare is well designed creating websites of automotive repair shops, stores with spare parts and accessories for car repairs, car washes, car danting and panting, service stations, car showrooms painting, major auto centers and other sites related to cars and car services."
+      content="S&S Engineering is a leading provider of maintenance services for a wide range of essential equipment. Our expertise spans kitchen equipment, coffee machines, cold storage units, -85°C freezers, and various laboratory instruments. We ensure the optimal performance and longevity of your critical appliances, whether in a commercial kitchen, a bustling café, or a high-tech laboratory. With nearly a decade of experience, S&S Engineering prides itself on delivering reliable, efficient solutions and unwavering commitment to quality and customer satisfaction."
     />
-    <meta property="og:image" content="social-image.png" />
 
     <!-- FAVICONS ICON -->
 
     <!-- PAGE TITLE HERE -->
-    <title>Services - JESR AL AMANAH</title>
+    <title>Services - S&S Engineering</title>
 
     <!-- MOBILE SPECIFIC -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
