--- a/about-us.html
+++ b/about-us.html
@@ -97,19 +97,18 @@
                 <ul class="social-bx list-inline pull-right">
                   <li>
                     <a
-                      target="__blank"
-                      href="https://www.instagram.com/jabm2018/"
+                      href="javascript:void(0);"
                       class="fa fa-instagram"
                     ></a>
                   </li>
                   <li>
-                    <a href="javascript:void(0);" class="fa fa-facebook"></a>
+                    <a target="_blank" href="https://www.facebook.com/profile.php?id=61562511711860&mibextid=ZbWKwL" class="fa fa-facebook"></a>
                   </li>
                   <li>
                     <a href="javascript:void(0);" class="fa fa-twitter"></a>
                   </li>
                   <li>
-                    <a href="javascript:void(0);" class="fa fa-linkedin"></a>
+                    <a target="_blank" href="https://www.linkedin.com/company/s-s-engineering-services-pvt-ltd/" class="fa fa-linkedin"></a>
                   </li>
                   <li>
                     <a href="javascript:void(0);" class="fa fa-google-plus"></a>
